# taiwan_stock_analysis

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  TODO  compose.yaml  generate_password.py  pyproject.toml  run.py  scrapy.cfg  start.sh  tox.ini
.github/workflows/: tests-ubuntu.yml
backup/: Dockerfile  backup.sh
data/: restore.sh
db_assets/: generate_password.py
nginx/: Dockerfile  nginx.conf
services/backup/: Dockerfile  backup.sh  crontab
services/traefik/: Dockerfile  traefik.yml
services/web/: Dockerfile  requirements.txt
taiwan_stock_analysis/: pipelines.py  settings.py  table.py
taiwan_stock_analysis/database/: datatype.py  mariadbclient.py
taiwan_stock_analysis/spiders/: daily_trading.py  stock_info.py
taiwan_stock_analysis/tests/: test_sample.py
tests/: __init__.py  daily_data.py  mockserver.py  requirements.txt  test_crawl.py
tests/test_site/: stock_info.html  stock_info.json
web/: .main.py.swp  Dockerfile  main.py  old  requirements.txt
